2008-02-17  KUBO Takehiro  <kubo@jiubao.org>
	* test/config.rb, test/test_break.rb, test/test_dbi.rb,
	  test/test_dbi_clob.rb, test/test_metadata.rb, test/test_oci8.rb
	    sleep a few seconds and retry if an attempt to connect to
	    a database server fails and its error code is ORA-12516
	    or ORA-12520 in test cases.

2008-01-12  KUBO Takehiro  <kubo@jiubao.org>
	* lib/oci8.rb.in: fix OCI8#non_blocking = false problem.
	    Once the connection became non-bocking mode, it could
	    not be reset to blocking mode.
	    (This problem is reported by Cagdas Gerede.)
	* test/test_break.rb: add a testcase to test the above problem.

2008-01-12  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oradate.c, ext/oci8/oranumber.c: fix SEGV bugs.
	    OraDate.new made a core dump on x86_64 linux.
	    (This problem is reported by Alun Eyre.)

2008-01-04  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/define.c, lib/oci8.rb.in: support cursors in a result
	    set without re-defining the define handle.
	* test/test_oci8.rb: delete re-defining in a test case for cursors
	    in a result set.

2007-12-29  KUBO Takehiro  <kubo@jiubao.org>
	* lib/oci8.rb.in: support cursors in a result set. For example:
	    SELECT column1 A, column2 B, CURSOR(SELECT * FROM table2) C
	      FROM table1
	    (contributed by Randy Gordon)
	* test/test_oci8.rb: add a testcase for cursors in a result set.

2007-12-23  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oraconf.rb: fix for official x86_64 rpms.
	    (contributed by Pat.)

2007-11-25  KUBO Takehiro  <kubo@jiubao.org>
	release as 1.0.0 again.
	* ext/oci8/stmt.c, test/test_dbi.rb: fix a problem when binding
	    ''(empty string) via dbi.

2007-11-25  KUBO Takehiro  <kubo@jiubao.org>
	* NEWS: add changes between 1.0.0-rc3 and 1.0.0.
	* VERSION: change version to 1.0.0.
	* dist-files: add test/test_metadata.rb.
	* lib/DBD/OCI8/OCI8.rb, lib/oci8.rb.in, test/test_metadata.rb:
	    rename OCI8::Metadata::Column#is_null? to 